--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sakthi Naveen (Portfoilo)</title>
+  <title>Sakthi Naveen | Portfoilo</title>
 </head>
 <body>
 </body>
