added index pages

--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
             <div class="about">
             <table>
             <th>
-                <p>An undergraduate student at Madras Christian College, Chennai. Programming has been my passion for almost 2 years untill now. I believe in lifelong learning that has no heights. Advancing and upgrading myself with the latest technologies is what I love the most. I am keen to learn more in the field of server side development along with some frontend knowledge.<br><br>
+                <p>An undergraduate student at Madras Christian College, Chennai. Programming has been my passion for almost 2 years untill now. I believe in lifelong learning that has no heights. Advancing and upgrading myself with the latest technologies is what I love the most.<br><br>
                 You can also Follow Me at :<br><a href=""><img src="Mat/instagram.jpg" alt="instagram"/></a><a href=""><img src="Mat/github.jpg" alt="github"/></a><a href=""><img src="Mat/YouTube2.jpg" alt="youtube"/></a>
                 </p>
             </th>
             <th>
 <!--twitterembed-->
-            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-            <div class="elfsight-app-69d4456d-169a-4185-8e8b-1b502e4ace17"></div>
+          <a class="twitter-timeline" href="https://twitter.com/ms_naveen7?ref_src=twsrc%5Etfw">Tweets by ms_naveen7</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </th>
             </table>
             </div>     
