--- a/index.html
+++ b/index.html
@@ -59,26 +59,26 @@
         <div class="about">
         </div>
 <!--github contribution-->
-<div class="contri">
-<!-- Prepare a container for your calendar. -->
-<center><h3 style="font-family: cursive;font-size:1.5em;"><u>Git Hub Contributions</u></h3></center>
+            <div class="contri">
+                <!-- Prepare a container for your calendar. -->
+                <center><h3 style="font-family: cursive;font-size:1.5em;"><u>Git Hub Contributions</u></h3></center>
 
-<script
-  src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
->
-</script>
+                <script
+                        src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
+                        >
+                </script>
 
-<!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
-<link
-  rel="stylesheet"
-  href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
-/>
+                <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+                <link
+        rel="stylesheet"
+                      href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
+                      />
 
-<!-- Prepare a container for your calendar. -->
-<div class="calendar">
+                <!-- Prepare a container for your calendar. -->
+                <div class="calendar">
     <!-- Loading stuff -->
     Loading the data just for you.
-</div>
+                </div>
 
 <script>
     new GitHubCalendar(".calendar", "sakthinaveenm");
@@ -89,6 +89,9 @@
         <div class="head">
         <center><h1>Certifications</h1></center>
         <br><br>
+        <center><img src="https://udemy-certificate.s3.amazonaws.com/image/UC-15a934ca-523d-4726-829c-bd73e63d6487.jpg" style=" width: 704px;
+    height: 522px;"/></center>
+        <br>
         <center><img src="Mat/cplus.PNG"/></center>
         <br>
         <center><img src="Mat/cplus2.PNG"/></center>
