--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
         <div class="head">
         <center><h1>Certifications</h1></center>
         <br><br>
+        <center><img src="https://udemy-certificate.s3.amazonaws.com/image/UC-5b80d6fa-a55a-47e6-848e-a971c04d87de.jpg?v=1611254137000" style=" width: 704px;
+            height: 522px;"/></center>
+        <br>
+        <center><img src="https://udemy-certificate.s3.amazonaws.com/image/UC-e788c4a0-ca71-4744-a9f6-dd2b20372852.jpg?v=1610179611000" style=" width: 704px;
+            height: 522px;"/></center>
+        <br>
         <center><img src="https://udemy-certificate.s3.amazonaws.com/image/UC-15a934ca-523d-4726-829c-bd73e63d6487.jpg" style=" width: 704px;
     height: 522px;"/></center>
         <br>
