--- a/index.html
+++ b/index.html
@@ -4,39 +4,62 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <title>Sakthi Naveen | Portfolio</title>
   </head>
   <body class="container-fluid bg-color-black">
-    <nav class="container-fluid fixed-top bg-color-black">
-      <p class ="text-center" style="color: black; background-color: white; padding-left:0em;">Home</p>
-    </nav>
+  <nav>
+	<a href="#">Home</a>
+	<a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">About</a>
+	<a href="#">Blog</a>
+	<a href="#">Portefolio</a>
+	<a href="#">Contact</a>
+	<div class="animation start-home"></div>
+</nav>
+<br>
     <div class="container-fluid bg-color-black row">
-          <div class="col P-5">
-            <br><br><br><br>
-                    <p class="h1 P-5">Sakthi Naveen M <br> <code>#Coder<blink class="blink_me">_</blink></code></p>
+          <div class="col-8 P-5">
+            <br><br>
+                    <b class="h1">Sakthi Naveen M  <br> <code>#Coder<blink class="blink_me">_</blink></code></b>
                     <span class="row p-2">
-                    <form action="Mat/SakthiNaveen_Resume.pdf">
-                        <button type="submit" class="button-style-custom">Resume</button>
-                    </form>
-                    &nbsp;&nbsp;
-                    <form action="mailto:sakthinaveenm@gmail.com">
-                        <button type="submit"  class="button-style-custom">Hire me</button>
-                    </form>
-                    </span>
-          </div>
-            <div class="col bg-color-black">
+                      <form action="Mat/SakthiNaveen_Resume.pdf">
+                          <button type="submit" class="button-style-custom">Resume</button>
+                      </form>
+                      &nbsp;&nbsp;
+                      <form action="mailto:sakthinaveenm@gmail.com">
+                          <button type="submit"  class="button-style-custom">Hire me</button>
+                      </form>
+                      </span>
+            </div>
+            <div class="col-4 bg-color-black">
                 <img src="Mat/sakthinaveen.png" class = "rounded-circle" style="float: right;border: 0cm;">
             </div>
+      </div>
+      <!--About Code area-->
+      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header bg-color-black">
+          <h5 class="offcanvas-title" id="offcanvasExampleLabel">About</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" style="background-color: white;"></button>
         </div>
+          </div>
+        </div>
+      </div>
+      <!--Ending Area-->
   </body>
 </html>
+<!--
+  <a >
+  Link with href
+</a>
+<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+  Button with data-bs-target
+</button>
+
+-->
