--- a/index.html
+++ b/index.html
@@ -7,59 +7,129 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
     <title>Sakthi Naveen | Portfolio</title>
   </head>
   <body class="container-fluid bg-color-black">
   <nav>
 	<a href="#">Home</a>
-	<a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">About</a>
-	<a href="#">Blog</a>
-	<a href="#">Portefolio</a>
-	<a href="#">Contact</a>
+	<a href="#about">About</a>
+	<a href="#projects">Projects</a>
+	<a href="#certificates">Certificates</a>
+	<a href="#about">Contact</a>
 	<div class="animation start-home"></div>
 </nav>
 <br>
     <div class="container-fluid bg-color-black row">
-          <div class="col-8 P-5">
+          <div class="col P-5">
             <br><br>
-                    <b class="h1">Sakthi Naveen M  <br> <code>#Coder<blink class="blink_me">_</blink></code></b>
-                    <span class="row p-2">
-                      <form action="Mat/SakthiNaveen_Resume.pdf">
+                    <div class="h1">Sakthi Naveen M  <br> <code style="color: green;">#Coder<blink class="blink_me" style="color: green;">_</blink></code></div>
+                    <div class="btn-group">  
+                    <form action="Mat/SakthiNaveen_Resume.pdf">
                           <button type="submit" class="button-style-custom">Resume</button>
                       </form>
-                      &nbsp;&nbsp;
+                      &nbsp;&nbsp;&nbsp;&nbsp;
                       <form action="mailto:sakthinaveenm@gmail.com">
                           <button type="submit"  class="button-style-custom">Hire me</button>
                       </form>
-                      </span>
+                    </div>
             </div>
-            <div class="col-4 bg-color-black">
+            <div class="col bg-color-black">
                 <img src="Mat/sakthinaveen.png" class = "rounded-circle" style="float: right;border: 0cm;">
             </div>
       </div>
-      <!--About Code area-->
-      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-        <div class="offcanvas-header bg-color-black">
-          <h5 class="offcanvas-title" id="offcanvasExampleLabel">About</h5>
-          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" style="background-color: white;"></button>
-        </div>
+      <br><br>
+      <div class="border-radius-half bg-color-white">
+        <br>
+        <a id="about"></a>
+        <div class="h1 text-center">About</div>
+          <hr>
+          <div class="h3 text-center">
+            An Undergraduate Students Who is Insterested in Learning Technologoies,Coding etc. <br>
+            And Coding Has been Passion For almost Two Years..and Keep on learning new Technologoies
+            <br><br> 
+          </div>
+          <div class="row p-5">
+          <div class="col container border-radius-half p-5">
+          <div class="h3">Languages Known</div>
+          <div class="h5"> Java</div>
+          <div class="progress">
+          <div class="progress-bar bg-info" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">40%</div>
+          </div>
+          <div class="h5">HTML/CSS/JS/BOOTSTRAP</div>
+          <div class="progress">
+          <div class="progress-bar bg-info" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">40%</div>
+          </div>
+          <div class="h5">C#</div>
+          <div class="progress">
+          <div class="progress-bar bg-info" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">40%</div>
+          </div>
+          </div>
+          <div class="col container border-radius-half p-5">
+          <div class="h3">Other Social Media</div>
+          <a href="http://"><img src="Mat/instagram.jpg" width="70px"></a>
+          <a href="http://"><img src="Mat/github.jpg" width="70px"></a>
+          <a href="http://"><img src="Mat/youtube.jpg" width="70px"></a>
           </div>
         </div>
-      </div>
-      <!--Ending Area-->
-  </body>
+        <a id="projects"></a>
+        <div class="h1 text-center">Projects</div>
+        <br>
+        <div class="row">
+          <div class="col p-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="Mat/project1.PNG" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <div class="h5">Student Database Management</div>
+                    <div class="p">Student Database built-in with Vb</div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <div class="h5">Online Used Vehicle System</div>
+                    <div class="p">It is built-in with Html,Css,php,Mysql</div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <div class="h5">Student Database Management</div>
+                    <div class="p">Student Database built-in with Vb</div>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+        </div>
+        <div class="col">
+          <div class="h2 p-5 text-center">Project Source Code </div>
+          <a href=""><div class="text-center"><img src="Mat/github.jpg" style="width:280px"></div></a>
+        </div>
+        </div>
+        <a id="certificates"></a>
+        <div class="h1 text-center">Certificates</div>
+        <hr>
+      </body>
 </html>
-<!--
-  <a >
-  Link with href
-</a>
-<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-  Button with data-bs-target
-</button>
-
--->
