--- a/index.html
+++ b/index.html
@@ -15,6 +15,64 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <style>
+       html {
+  scroll-behavior: smooth;
+}
+body {
+  margin: 0;
+  background-color: #000;
+}
+h1 {
+  font-family: Arial;
+  color: red;
+  text-align: center;
+}
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 100%);
+  overflow: hidden;
+  scroll-behavior: smooth;
+}
+.wrapper section {
+  width: 100%;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  margin: 20px 0;
+}
+.wrapper section .item {
+  padding: 0 2px;
+  transition: 250ms all;
+}
+.wrapper section .item:hover {
+  margin: 0 40px;
+  transform: scale(1.2);
+}
+.wrapper section a {
+  position: absolute;
+  color: #fff;
+  text-decoration: none;
+  font-size: 6em;
+  background: black;
+  width: 80px;
+  padding: 20px;
+  text-align: center;
+  z-index: 1;
+}
+.wrapper section a:nth-of-type(1) {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, black 100%);
+}
+.wrapper section a:nth-of-type(2) {
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, black 100%);
+}
+</style>
     <title>Sakthi Naveen | Portfolio</title>
   </head>
   <body class="container-fluid bg-color-black">
@@ -52,11 +110,11 @@
         <div class="h1 text-center">About</div>
           <hr>
           <div class="h3 text-center">
-            An Undergraduate Students Who is Insterested in Learning Technologoies,Coding etc. <br>
+            An Undergraduate Students Who is Instrested in Learning Technologoies,Coding etc. <br>
             And Coding Has been Passion For almost Two Years..and Keep on learning new Technologoies
             <br><br> 
           </div>
-          <div class="row p-5">
+          <div class="row p-3">
           <div class="col container border-radius-half p-5">
           <div class="h3">Languages Known</div>
           <div class="h5"> Java</div>
@@ -72,64 +130,82 @@
           <div class="progress-bar bg-info" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">40%</div>
           </div>
           </div>
-          <div class="col container border-radius-half p-5">
+          <div class="col container border-radius-half p-3">
           <div class="h3">Other Social Media</div>
-          <a href="http://"><img src="Mat/instagram.jpg" width="70px"></a>
+          <a href="https://www.instagram.com/ms_naveen7/"><img src="Mat/instagram.jpg" width="70px"></a>
           <a href="http://"><img src="Mat/github.jpg" width="70px"></a>
           <a href="http://"><img src="Mat/youtube.jpg" width="70px"></a>
           </div>
         </div>
         <a id="projects"></a>
         <div class="h1 text-center">Projects</div>
-        <br>
-        <div class="row">
-          <div class="col p-5">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="Mat/project1.PNG" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <div class="h5">Student Database Management</div>
-                    <div class="p">Student Database built-in with Vb</div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <div class="h5">Online Used Vehicle System</div>
-                    <div class="p">It is built-in with Html,Css,php,Mysql</div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <div class="h5">Student Database Management</div>
-                    <div class="p">Student Database built-in with Vb</div>
-                  </div>
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
+        <hr>
+        <div class="container-fluid">
+        <div class="card-group">
+        <div class="card mb-3 m-5" style="width: 600px;">
+          <img src="Mat/project1.PNG" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h4 class="card-title">Student DataBase</h4s>
+            <h6 class="card-text">Built-in With Vb and Sql-Server</h6>
+            <hr>
+            <h5 class="card-title"><a href="#">Get Project Github Link <img src="Mat/github.jpg" width="50px"/></a></h5>
+          </div>
         </div>
-        <div class="col">
-          <div class="h2 p-5 text-center">Project Source Code </div>
-          <a href=""><div class="text-center"><img src="Mat/github.jpg" style="width:280px"></div></a>
+        <div class="card mb-3 m-5" style="width: 600px;">
+          <img src="Mat/project1.PNG" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h4 class="card-title">Online Used Vehicle Selling System</h4s>
+            <h6 class="card-text">Built-in With HTML,CSS,BOOTSTRAP,PHP,MYSQL</h6>
+            <hr>
+            <h5 class="card-title"><a href="#">Get Project Github Link <img src="Mat/github.jpg" width="50px"/></a></h5>
+          </div>
         </div>
-        </div>
+      </div>
+      </div>
         <a id="certificates"></a>
         <div class="h1 text-center">Certificates</div>
         <hr>
+        <div class="container-fluid">
+          <div class="wrapper">
+            <section id="section1">
+              <a href="#section3">‹</a>
+                <div class="item m-5">
+                 <img src="https://udemy-certificate.s3.amazonaws.com/image/UC-15a934ca-523d-4726-829c-bd73e63d6487.jpg?v=1603994366000" alt="Describe Image" width="500px" height="300px" onclick="location.replace('Display.html');">
+                </div>
+                <div class="item m-5">
+                  <img src="https://udemy-certificate.s3.amazonaws.com/image/UC-e788c4a0-ca71-4744-a9f6-dd2b20372852.jpg?v=1610179611000" alt="Describe Image" width="500px" height="300px">
+                </div>
+              <a href="#section2">›</a>
+            </section>
+            <section id="section2">
+              <a href="#section1">‹</a>
+              <div class="item m-5">
+                <img src="https://udemy-certificate.s3.amazonaws.com/image/UC-941a19db-bffc-4f5f-a78f-3a72511f13d6.jpg?v=1592924513000" alt="Describe Image" width="500px" height="300px">
+              </div>
+              <div class="item m-5">
+                <img src="https://udemy-certificate.s3.amazonaws.com/image/UC-737f44eb-22c8-4808-a36b-51b5072a930d.jpg?v=1584632764000" alt="Describe Image" width="500px" height="300px">
+              </div>
+             <a href="#section1">›</a>
+            </section>
+            <section id="section3">
+              <a href="#section2">‹</a>
+              <div class="item">
+                <img src="Banner/MAA.jpg" alt="Describe Image" width="280px" height="300px"> 
+               </div>
+               <div class="item">
+                 <img src="Banner/PF CAU.jpg" alt="Describe Image" width="280px" height="300px">
+               </div>
+               <div class="item">
+                 <img src="Banner/PFI.jpg" alt="Describe Image" width="280px" height="300px">
+               </div>
+               <div class="item">
+                 <img src="Banner/PFIL.jpg" alt="Describe Image" width="280px" height="300px">
+               </div>
+               <div class="item">
+                 <img src="Banner/PFI.jpg" alt="Describe Image" width="280px" height="300px">
+               </div>
+               <a href="#section1">›</a>
+            </section>
+        </div>
       </body>
 </html>
