--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
     ></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript">
+<!--     <script type="text/javascript">
       function Redirect() {
         window.location = "https://sakthinaveenm.netlify.app/";
       }
       Redirect();
-    </script>
+    </script> -->
     <title>Sakthi Naveen | Portfolio</title>
   </head>
   <body class="container-fluid bg-color-black">
-    <!-- <nav class="bg-color-white p-3 text-center fixed-top">
+     <nav class="bg-color-white p-3 text-center fixed-top">
 	<a href="#">Home</a>
 	<a href="#about">About</a>
 	<a href="#projects">Projects</a>
@@ -214,6 +214,6 @@
       </div>  
       
 
-    </div> -->
+    </div> 
   </body>
 </html>
